--- a/Analysis/cheatsheet/main.tex
+++ b/Analysis/cheatsheet/main.tex
@@ -1330,6 +1330,10 @@ $
   \item Falls $f$ stetig ist, gibt es $x_0 \in [a, b]$, so dass $\int_{a}^{b}xf(x)dx = \frac{f(x_0)}{2} (b^2 -a^2)$
 \end{itemize}
  \item Sei $f$ eine ungerade Funktion dann ist $f^{(i)} (0) = 0$ für $i$ gerade
+ \item Sei $\phi$ eine Abbildung einer Reihe $\sum_{k = 1}^{\infty} a_k$ und $b_n = a_{\phi_{(n)}}$
+\begin{itemize}
+ \item Wenn die Reihe absolut konvergiert und $\phi$ injektiv ist, dann ist die Reihe mit $b_n$ auch konvergent (Wenn nicht absolut konvergent, dann kann man jeden möglichen Wert bekommen, Surjektiv funktioniert nicht, Annahme $a_n = \frac{1}{n^2}$)
+\end{itemize}
 \end{itemize}
 \newpage
 \section{Tabellen}
